--- a/arch/arm/boot/dts/qcom/msm8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994.dtsi
@@ -2615,6 +2615,7 @@
 				"msm-dai-q6-dev.32770";
 		asoc-codec = <&stub_codec>;
 		asoc-codec-names = "msm-stub-codec.1";
+		qcom,headset-jack-type-NC;
 	};
 
 	qcom,msm-adsp-loader {
