sambar: enable JEITA compliance
Change-Id: I99a7ab98ba8cbadccfa8dda3da97bbd5783fe1eb

--- a/arch/arm64/configs/cyanogenmod_sambar_defconfig
+++ b/arch/arm64/configs/cyanogenmod_sambar_defconfig
@@ -1979,6 +1979,7 @@ CONFIG_QPNP_FG=y
 # CONFIG_QPNP_LINEAR_CHARGER is not set
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
+CONFIG_BATTERY_JEITA_COMPLIANCE=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 CONFIG_POWER_RESET_MSM=y
@@ -3334,8 +3335,6 @@ CONFIG_STAGING=y
 # Android
 #
 CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
-# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
@@ -3490,6 +3489,11 @@ CONFIG_MOBICORE_SUPPORT=y
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=y
 # CONFIG_RESET_CONTROLLER is not set
+
+#
+# Android
+#
+CONFIG_ANDROID_BINDER_IPC=y
 # CONFIG_CORESIGHT is not set
 # CONFIG_BIF is not set
 CONFIG_SENSORS=y
